# ClashRPC

./: .env.example  .gitignore  Cargo.toml  LICENSE  NOTICE  README.md  build.rs
src/: lib.rs  main.rs
src/app/: mod.rs
src/config/: mod.rs  setup.rs
src/core/: constants.rs  embedded_env.rs  log.rs  mod.rs  update.rs  util.rs
src/cr/: api.rs  arena.rs  battle.rs  mod.rs  models.rs
src/discord/: rpc.rs
src/ui/: mod.rs
